change name of docdetails.jsp to docdetails_profkat.jsp (avoid conflicts with JSP in jspdocportal-module)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@38194 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -9,6 +9,8 @@ MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
 MCR.Workflow.RetrieveMode.profkat=/mycoreobject[contains(@ID,'_person_')]
 MCR.Workflow.DerivateLabels.profkat=default,display_portrait,display_signature,display_biography,display_none
 
+MCR.JSPDocportal.Doctails.View=/content/docdetails_profkat.jsp
+
 ## SOLR search configuration
 #MCR.Searcher.lucene-metadata.Index=
 #MCR.Searcher.solr-metadata.Index=metadata
