--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -3,13 +3,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.mycore</groupId>
-    <artifactId>mycore-application-starter</artifactId>
-    <version>2020.06.1-SNAPSHOT</version>
+    <groupId>org.mycore.professorenkatalog</groupId>
+    <artifactId>professorenkatalog-parent</artifactId>
+    <version>2020.06-SNAPSHOT</version>
   </parent>
-  <groupId>org.mycore.profkat</groupId>
   <artifactId>profkat-base-module</artifactId>
-  <version>2020.06-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Professorenkatalog Base</name>
   <description>generic code for professorenkatalog</description>
