write MANIFEST entries by maven-jar-plugin

--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -60,7 +60,11 @@
               <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
               <addExtensions />
             </manifest>
-            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+            <manifestEntries>
+              <MCR-Artifact-Id>${project.artifactId}</MCR-Artifact-Id>
+              <MCR-Application-Module>${project.name}</MCR-Application-Module>
+              <Priority>61</Priority>
+            </manifestEntries>
           </archive>
         </configuration>
       </plugin>
