add entry diverse to OMD.profkat.sex

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -37,7 +37,7 @@ MCR.SearchResult.person.DefaultCoverfield=profkat.sex
 ##################################################
 OMD.profkat.state=inprogress,long,short,document,other
 OMD.profkat.professorship_other=,x-chair,x-predec,x-succ
-OMD.profkat.sex=male,female,unknown
+OMD.profkat.sex=male,female,diverse,unknown
 OMD.profkat.family=,father,mother,husband,wife,son,daughter,brother,sister,father_in_law,son_in_law,other
 OMD.profkat.biographic=,school,studies,otherprofessorship
 OMD.profkat.academicdegree=,studies,promotion,promotion_bis1800,habilitation,habilitation_bis1934,other
