--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -187,7 +187,7 @@
       <artifactId>jdom2</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.mycore</groupId>
+      <groupId>org.mycore.jspdocportal</groupId>
       <artifactId>jspdocportal-module</artifactId>
     </dependency>
     <dependency>
@@ -207,7 +207,7 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.mycore</groupId>
+        <groupId>org.mycore.jspdocportal</groupId>
         <artifactId>jspdocportal-module</artifactId>
         <version>${project.version}</version>
       </dependency>
