#2 Vorstand als Rolle in der akad. Selbstverwaltung

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -43,7 +43,7 @@ OMD.profkat.biographic=,school,studies,otherprofessorship
 OMD.profkat.academicdegree=,studies,promotion,promotion_bis1800,habilitation,habilitation_bis1934,other
 #CPHH: OMD.profkat.academicdegree=,studies,promotion,habilitation,habilitation_bis1934,other
 #CPB:  OMD.profkat.academicdegree=,studies,promotion,habilitation,other
-OMD.profkat.adminfunction=,rektor,dekan,direktor,prorektor,prodekan,stellvdirektor,other
+OMD.profkat.adminfunction=,rektor,dekan,direktor,prorektor,prodekan,stellvdirektor,vorstand,other
 #CPB:  OMD.profkat.adminfunction=,direktor,rektor,prodrektor,praesident,vizepraesident,direktor_brh,direktor_ph,rektor_ph,dekan_ph,other
 OMD.profkat.otherfunction=,
 OMD.profkat.membership=,scientific
