--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -19,6 +19,8 @@ MCR.Searchmask.profkat-extended.sortfields=profkat.idx_profname.headline,profkat
 ##########################################
 # Search Result 
 ##########################################
+MCR.Search.CsvDownload.Fields=purl,profkat.idx_profname.headline,profkat.period,profkat.gnd,profkat.lifetime
+MCR.Search.CsvDownload.Rows=5000
 MCR.SearchResult.person.Headerfield=profkat.idx_profname.headline
 MCR.SearchResult.person.Datafields=profkat.academictitle,profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty,profkat.state_msg
 MCR.SearchResult.person.DefaultCoverfield=profkat.sex
