#5 configure download file name and add more searchfields to download

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -19,8 +19,9 @@ MCR.Searchmask.profkat-extended.sortfields=profkat.idx_profname.headline,profkat
 ##########################################
 # Search Result 
 ##########################################
-MCR.Search.CsvDownload.Fields=purl,profkat.idx_profname.headline,profkat.period,profkat.gnd,profkat.lifetime
+MCR.Search.CsvDownload.Fields=purl,profkat.idx_profname.headline,profkat.period,profkat.gnd,profkat.lifetime,profkat.last_professorship,profkat.last_faculty
 MCR.Search.CsvDownload.Rows=5000
+MCR.Search.CsvDownload.Filename=profkat_searchresult.csv
 MCR.SearchResult.person.Headerfield=profkat.idx_profname.headline
 MCR.SearchResult.person.Datafields=profkat.academictitle,profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty,profkat.state_msg
 MCR.SearchResult.person.DefaultCoverfield=profkat.sex
