deathdate/pace birthdate/place as solr fields for csv download

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -19,7 +19,7 @@ MCR.Searchmask.profkat-extended.sortfields=profkat.idx_profname.headline,profkat
 ##########################################
 # Search Result 
 ##########################################
-MCR.Search.CsvDownload.Fields=purl,profkat.idx_profname.headline,profkat.period,profkat.gnd,profkat.lifetime,profkat.last_professorship,profkat.last_faculty
+MCR.Search.CsvDownload.Fields=purl,profkat.idx_profname.headline,profkat.period,profkat.gnd,profkat.birthdate,profkat.birthplace,profkat.deathdate,profkat.deathplace,profkat.last_professorship,profkat.last_faculty
 MCR.Search.CsvDownload.Rows=5000
 MCR.Search.CsvDownload.Filename=profkat_searchresult.csv
 MCR.SearchResult.person.Headerfield=profkat.idx_profname.headline
