add spouse (Ehepartner/in) for related persons

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -2,7 +2,7 @@
 
 MCR.profkat.WBIS.user-ip.ubrostock=139\\.30\\..*|127\\.0\\..*
 MCR.profkat.WBIS.user-ip.subunihh=134\\.100\\..*
-MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\..* 
+MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\..*
 
 MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
 
@@ -33,7 +33,7 @@ MCR.SearchResult.person.DefaultCoverfield=profkat.sex
 OMD.profkat.state=inprogress,long,short,document,other
 OMD.profkat.professorship_other=,x-chair,x-predec,x-succ
 OMD.profkat.sex=male,female,diverse,unknown
-OMD.profkat.family=,father,mother,husband,wife,son,daughter,brother,sister,father_in_law,son_in_law,other
+OMD.profkat.family=,father,mother,husband,wife,spouse,son,daughter,brother,sister,father_in_law,son_in_law,other
 OMD.profkat.biographic=,school,studies,otherprofessorship
 OMD.profkat.academicdegree=,studies,promotion,promotion_bis1800,habilitation,habilitation_bis1934,other
 #CPHH: OMD.profkat.academicdegree=,studies,promotion,habilitation,habilitation_bis1934,other
