--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.mycore.professorenkatalog</groupId>
     <artifactId>professorenkatalog-parent</artifactId>
-    <version>2020.06-SNAPSHOT</version>
+    <version>2021.06-SNAPSHOT</version>
   </parent>
   <artifactId>profkat-base-module</artifactId>
   <packaging>jar</packaging>
@@ -139,39 +139,6 @@
         </executions>
       </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-     		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      org.mycore.plugins
-                    </groupId>
-                    <artifactId>
-                      datamodel-plugin
-                    </artifactId>
-                    <versionRange>[0.7,)</versionRange>
-                    <goals>
-                      <goal>schema</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
   <dependencies>
     <dependency>
@@ -188,7 +155,7 @@
     </dependency>
     <dependency>
       <groupId>org.mycore.jspdocportal</groupId>
-      <artifactId>jspdocportal-module</artifactId>
+      <artifactId>jspdocportal-common-module</artifactId>
     </dependency>
     <dependency>
       <groupId>org.mycore</groupId>
@@ -208,7 +175,7 @@
     <dependencies>
       <dependency>
         <groupId>org.mycore.jspdocportal</groupId>
-        <artifactId>jspdocportal-module</artifactId>
+        <artifactId>jspdocportal-common-module</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
