--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -170,9 +170,7 @@ MCR.Metadata.Config.person=datamodel-person.xml
 ##############################################################################
 # URIResolver & ContentTransformer                                           #
 ##############################################################################
-MCR.ContentTransformer.mycoreobject-solrdocument.Stylesheet=xsl/solr/profkat-solrbase.xsl
-MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-document%,solr/profkat-solr.xsl
-MCR.URIResolver.xslIncludes.solrResponse=%MCR.URIResolver.xslIncludes.solrResponse%,solr/response-page.xsl
+MCR.URIResolver.xslImports.solr-document-3=%MCR.URIResolver.xslImports.solr-document-3%,solr/indexing/profkat-solr-3.xsl
 
 
 ##############################################################################
