move docdetails_profkat to WEB-INF/views

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -9,7 +9,7 @@ MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
 MCR.Workflow.RetrieveMode.profkat=/mycoreobject[contains(@ID,'_person_')]
 MCR.Workflow.DerivateLabels.profkat=default,display_portrait,display_signature,display_biography,display_none
 
-MCR.JSPDocportal.Doctails.View=/content/docdetails_profkat.jsp
+MCR.JSPDocportal.Doctails.View=/docdetails_profkat
 
 MCR.Searchmask.default.sortfields=
 MCR.Searchmask.profkat-bar.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
