modifications to make docdetails work again

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -1,13 +1,19 @@
 ##### Application specific properties
+MCR.NameOfProject=Beispielprofessorenkatalog
+MCR.SWF.Project.ID=pk
+MCR.Metadata.ObjectID.NumberPattern=00000000
+
+
+MCR.Workflow.WorkflowMgr.Class.create_object_simple.wf_edit_person=org.mycore.profkat.bpmn.workflows.create_object_simple.MCRWorkflowMgrPerson
+MCR.Workflow.TaskAssignment.CandidateUsers.create_object_simple.wf_edit_person=administrator
+MCR.Workflow.RetrieveMode.wf_edit_profkat=/mycoreobject[contains(@ID,'_person_')]
+MCR.Workflow.Metadata.Editor.Path.create_object_simple.wf_edit_profkat=/editor/metadata/editor-person-metadata.xed
 
 MCR.profkat.WBIS.user-ip.ubrostock=139\\.30\\..*|127\\.0\\..*
 MCR.profkat.WBIS.user-ip.subunihh=134\\.100\\..*
 MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\..*
 
 MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
-
-MCR.Workflow.RetrieveMode.profkat=/mycoreobject[contains(@ID,'_person_')]
-MCR.Workflow.DerivateLabels.profkat=default,display_portrait,display_signature,display_biography,display_none
 
 MCR.JSPDocportal.Doctails.View=/docdetails_profkat
 
@@ -125,30 +131,6 @@ MCR.URIResolver.Classification.Sort.profkat_class_institutions=false
 
 MCR.WorkflowEngine.Administrator.Email=profkatadmin@beispiel-uni.de
 MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/workspace/person
-MCR.WorkflowEngine.ManagerImpl.professorum=org.mycore.frontend.workflowengine.jbpm.professorum.MCRWorkflowManagerProfessorum
-MCR.WorkflowEngine.WorkflowTypes=professorum
-
-MCR.WorkflowEngine.defaultACL.derivate.commitdb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.derivate.deletedb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.derivate.deletewf.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.derivate.read.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.derivate.writedb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-
-MCR.WorkflowEngine.defaultACL.editorMode.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-
-MCR.WorkflowEngine.defaultACL.person.commitdb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.person.deletedb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.person.deletewf.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.person.read.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-MCR.WorkflowEngine.defaultACL.person.writedb.professorum=<conditions format\="xml"><condition field\="group" operator\="\=" value\="editprofessorum" /></conditions>
-
-MCR.WorkflowEngine.professorum.admin=robert.stephan@uni-rostock.de
-MCR.WorkflowEngine.professorum.from=unigeschichte@uni-rostock.de
-MCR.WorkflowEngine.professorum.replyto=unigeschichte@uni-rostock.de
-
-MCR.NameOfProject=Beispielprofessorenkatalog
-MCR.SWF.Project.ID=pk
-MCR.Metadata.ObjectID.NumberPattern=00000000
 
 log4j.logger.org.apache.catalina=ERROR, stdout, R
 log4j.logger.org.apache.jasper.servlet.JspServlet=ERROR, stdout, R
