initial configuration for fact based access system

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -17,6 +17,10 @@ MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
 
 MCR.JSPDocportal.Doctails.View=/docdetails_profkat
 
+## new ACL-System:
+MCR.Access.Strategy.Class=org.mycore.access.facts.MCRFactsAccessSystem
+MCR.Access.Class=org.mycore.access.facts.MCRFactsAccessSystem
+
 MCR.Searchmask.default.sortfields=
 MCR.Searchmask.profkat-bar.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
 MCR.Searchmask.profkat-simple.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
