workflow roles and initialisation

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -4,8 +4,8 @@ MCR.SWF.Project.ID=pk
 MCR.Metadata.ObjectID.NumberPattern=00000000
 
 
-MCR.Workflow.WorkflowMgr.Class.create_object_simple.wf_edit_person=org.mycore.profkat.bpmn.workflows.create_object_simple.MCRWorkflowMgrPerson
-MCR.Workflow.TaskAssignment.CandidateUsers.create_object_simple.wf_edit_person=administrator
+MCR.Workflow.WorkflowMgr.Class.create_object_simple.wf_edit_profkat=org.mycore.profkat.bpmn.workflows.create_object_simple.MCRWorkflowMgrPerson
+MCR.Workflow.TaskAssignment.CandidateUsers.create_object_simple.wf_edit_profkat=administrator
 MCR.Workflow.RetrieveMode.wf_edit_profkat=/mycoreobject[contains(@ID,'_person_')]
 MCR.Workflow.Metadata.Editor.Path.create_object_simple.wf_edit_profkat=/editor/metadata/editor-person-metadata.xed
 
