renamed search result labels

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -28,6 +28,8 @@ MCR.Searchmask.profkat-bar.sortfields=profkat.idx_profname.headline,profkat.prof
 MCR.Searchmask.profkat-simple.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
 MCR.Searchmask.profkat-extended.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
 
+MCR.Searchmask.default.datafields=profkat.academictitle,profkat.period,profkat.last_professorship,profkat.last_faculty,profkat.status_msg
+
 ##########################################
 # Search Result 
 ##########################################
@@ -36,6 +38,7 @@ MCR.Search.CsvDownload.Rows=5000
 MCR.Search.CsvDownload.Filename=profkat_searchresult.csv
 MCR.SearchResult.person.Headerfield=profkat.idx_profname.headline
 MCR.SearchResult.person.Datafields=profkat.academictitle,profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty,profkat.state_msg
+MCR.SearchResult.person.Internalfields=ir.cover_url
 MCR.SearchResult.person.DefaultCoverfield=profkat.sex
 
 
