--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>org.mycore</groupId>
     <artifactId>mycore-parent</artifactId>
-     <version>48-SNAPSHOT</version>
+     <version>51</version>
   </parent>
   <groupId>org.mycore.professorenkatalog</groupId>
   <artifactId>professorenkatalog-parent</artifactId>
-  <version>2021.06-SNAPSHOT</version>
+  <version>2022.06-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>MyCoRe Professorenkatalog</name>
   <description>Professorenkatalog based on MyCoRe JSPDocportal</description>
@@ -21,9 +21,9 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.mycore</groupId>
-        <artifactId>mycore-application-starter</artifactId>
-        <version>2021.06.2-SNAPSHOT</version>
+        <groupId>org.mycore.jspdocportal</groupId>
+        <artifactId>jspdocportal-bom</artifactId>
+        <version>2022.06-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
