separate docdetails and printdetails #10

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -18,6 +18,7 @@ MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\..*
 MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
 
 MCR.JSPDocportal.Doctails.View=/docdetails_profkat
+MCR.JSPDocportal.Doctails.Print=/printdetails_profkat
 
 ## new ACL-System:
 MCR.Access.Strategy.Class=org.mycore.access.facts.MCRFactsAccessSystem
