update feedback form properties

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -15,7 +15,8 @@ MCR.profkat.WBIS.user-ip.ubrostock=139\\.30\\..*|127\\.0\\..*
 MCR.profkat.WBIS.user-ip.subunihh=134\\.100\\..*
 MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\..*
 
-MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
+MCR.Workflow.Email.Feedback.Subject=[Profkat Feedback] {0}
+MCR.Workflow.Email.Feedback.Recipient=my-email@my-institution.de
 
 MCR.JSPDocportal.Doctails.View=/docdetails_profkat
 MCR.JSPDocportal.Doctails.Print=/printdetails_profkat
