--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -139,7 +139,7 @@ MCR.Metadata.Config.person=datamodel-person.xml
 ##############################################################################
 # URIResolver & ContentTransformer                                           #
 ##############################################################################
-MCR.URIResolver.xslImports.solr-document-3=%MCR.URIResolver.xslImports.solr-document-3%,solr/indexing/profkat-solr-3.xsl
+MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-document%,solr/indexing/profkat-solr.xsl
 
 # frequence for google access
 # allways - hourly - daily - weekly - monthly - yearly - never
