--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.mycore</groupId>
     <artifactId>mycore-parent</artifactId>
-     <version>51</version>
+    <version>56-SNAPSHOT</version>
   </parent>
   <groupId>org.mycore.professorenkatalog</groupId>
   <artifactId>professorenkatalog-parent</artifactId>
