support for more identifiers (VIAF, ORCID) #18

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -61,7 +61,7 @@ OMD.profkat.otherfunction=,
 OMD.profkat.membership=,scientific
 OMD.profkat.partymember=,
 OMD.profkat.award=,
-OMD.profkat.identifier=,gnd,nognd
+OMD.profkat.identifier=,gnd,nognd,viaf,orcid
 
 
 ##########################################
