use type-attribute for internal_info #18
(Göttingen, Liste der Bearbeiter)

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -62,6 +62,7 @@ OMD.profkat.membership=,scientific
 OMD.profkat.partymember=,
 OMD.profkat.award=,
 OMD.profkat.identifier=,gnd,nognd,viaf,orcid
+OMD.profkat.internalinfo=,editor
 
 
 ##########################################
